--- a/src/main/resources/database-config.properties
+++ b/src/main/resources/database-config.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE
-spring.datasource.url = jdbc:mysql://localhost:3306/library?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/library?useSSL=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = root
 
